# geo-cli-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  conftest.py  test_bake.py  test_generated_project.py  test_hooks.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE_APACHE  LICENSE_BSD  LICENSE_PROPRIETARY  README.md  pyproject.toml  {{ cookiecutter.command_name }}.toml.example
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  cli.py  config.py  console.py  conversion.py  errors.py  pipeline.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/commands/: __init__.py  batch.py  convert.py  geometry.py  info.py  raster.py  vector.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_cli.py  test_config.py  test_console.py  test_conversion.py  test_geometry.py  test_pipeline.py  test_raster.py  test_vector.py
